# obsplan

./: .gitattributes  .gitignore  pyproject.toml
src/obsplan/: backups.py  cli.py  config.py  io.py  planning.py  plotting.py  sites.py
tests/: test_backaups.py  test_io.py  test_planning.py  test_plotting_smoke.py
