[project]
authors = [{name = "Peter Scicluna", email = "pscicluna@users.noreply.github.com"}]
dependencies = []
name = "obsplan"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
obsplan = { path = ".", editable = true }

[tool.pixi.tasks]
